--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
       <!-- Timeblocks go here -->
       <div class="d-flex col-12 row">
         <div class="col-1 hour">8AM</div><textarea name="textarea" id="hr-8" class="col-10 description"></textarea>
-        <button id="btn8" class="col-1 saveBtn"><i class='fa-solid fa-floppy-disk'></i></button>
+        <button id="btn8" class="col-1 saveBtn"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-lock-fill" viewBox="0 0 16 16">
+          <path d="M8 1a2 2 0 0 1 2 2v4H6V3a2 2 0 0 1 2-2zm3 6V3a3 3 0 0 0-6 0v4a2 2 0 0 0-2 2v5a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V9a2 2 0 0 0-2-2z"/>
+        </svg></button>
       </div>
         <div class="d-flex col-12 row">
           <div class="col-1 hour">9AM</div><textarea name="textarea" id="hr-9" class="col-10 description"></textarea>
