--- a/index.html
+++ b/index.html
@@ -30,57 +30,57 @@
     </header>
     <div class="container d-flex col-12 flex-wrap justify-content-center">
       <!-- Timeblocks go here -->
-      <div class="d-flex flex-nowrap col-10 row justify-content-center">
+      <div class="d-flex flex-nowrap col-11 row justify-content-center">
         <div class="col-lg-1 col-sm-2 col-3 hour">8AM</div><textarea name="textarea" id="hr-8" class="col-lg-8 col-sm-7 col-6 description"></textarea>
-        <button id="btn8" class="col-1 saveBtn"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-lock-fill" viewBox="0 0 16 16">
+        <button id="btn8" class="col-lg-1 col-sm-2 col-3 saveBtn"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-lock-fill" viewBox="0 0 16 16">
           <path d="M8 1a2 2 0 0 1 2 2v4H6V3a2 2 0 0 1 2-2zm3 6V3a3 3 0 0 0-6 0v4a2 2 0 0 0-2 2v5a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V9a2 2 0 0 0-2-2z"/>
         </svg></button>
       </div>
-        <div class="d-flex flex-nowrap col-10 row justify-content-center">
+        <div class="d-flex flex-nowrap col-11 row justify-content-center">
           <div class="col-lg-1 col-sm-2 col-3 hour">9AM</div><textarea name="textarea" id="hr-9" class="col-lg-8 col-sm-7 col-6 description"></textarea>
-          <button id="btn9" class="col-1 saveBtn"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-lock-fill" viewBox="0 0 16 16">
+          <button id="btn9" class="col-lg-1 col-sm-2 col-3 saveBtn"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-lock-fill" viewBox="0 0 16 16">
             <path d="M8 1a2 2 0 0 1 2 2v4H6V3a2 2 0 0 1 2-2zm3 6V3a3 3 0 0 0-6 0v4a2 2 0 0 0-2 2v5a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V9a2 2 0 0 0-2-2z"/>
           </svg></button>
         </div>
-        <div class="d-flex flex-nowrap col-10 row justify-content-center">
+        <div class="d-flex flex-nowrap col-11 row justify-content-center">
           <div class="col-lg-1 col-sm-2 col-3 hour">10AM</div><textarea name="textarea" id="hr-10" class="col-lg-8 col-sm-7 col-6 description"></textarea>
-          <button id="btn10" class="col-1 saveBtn"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-lock-fill" viewBox="0 0 16 16">
+          <button id="btn10" class="col-lg-1 col-sm-2 col-3 saveBtn"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-lock-fill" viewBox="0 0 16 16">
             <path d="M8 1a2 2 0 0 1 2 2v4H6V3a2 2 0 0 1 2-2zm3 6V3a3 3 0 0 0-6 0v4a2 2 0 0 0-2 2v5a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V9a2 2 0 0 0-2-2z"/>
           </svg></button>
         </div>
-      <div class="d-flex flex-nowrap col-10 row justify-content-center">
+      <div class="d-flex flex-nowrap col-11 row justify-content-center">
         <div class="col-lg-1 col-sm-2 col-3 hour">11AM</div><textarea name="textarea" id="hr-11" class="col-lg-8 col-sm-7 col-6 description"></textarea>
-        <button id="btn11" class="col-1 saveBtn"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-lock-fill" viewBox="0 0 16 16">
+        <button id="btn11" class="col-lg-1 col-sm-2 col-3 saveBtn"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-lock-fill" viewBox="0 0 16 16">
           <path d="M8 1a2 2 0 0 1 2 2v4H6V3a2 2 0 0 1 2-2zm3 6V3a3 3 0 0 0-6 0v4a2 2 0 0 0-2 2v5a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V9a2 2 0 0 0-2-2z"/>
         </svg></button>
       </div>
-        <div class="d-flex flex-nowrap col-10 row justify-content-center">
+        <div class="d-flex flex-nowrap col-11 row justify-content-center">
           <div class="col-lg-1 col-sm-2 col-3 hour">12PM</div><textarea name="textarea" id="hr-12" Class="col-lg-8 col-sm-7 col-6 description"></textarea>
-          <button id="btn12" class="col-1 saveBtn"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-lock-fill" viewBox="0 0 16 16">
+          <button id="btn12" class="col-lg-1 col-sm-2 col-3 saveBtn"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-lock-fill" viewBox="0 0 16 16">
             <path d="M8 1a2 2 0 0 1 2 2v4H6V3a2 2 0 0 1 2-2zm3 6V3a3 3 0 0 0-6 0v4a2 2 0 0 0-2 2v5a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V9a2 2 0 0 0-2-2z"/>
           </svg></button>
         </div>
-        <div class="d-flex flex-nowrap col-10 row justify-content-center">
+        <div class="d-flex flex-nowrap col-11 row justify-content-center">
           <div class="col-lg-1 col-sm-2 col-3 hour">1PM</div><textarea name="textarea" id="hr-13" class="col-lg-8 col-sm-7 col-6 description"></textarea>
-          <button id="btn13" class="col-1 saveBtn"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-lock-fill" viewBox="0 0 16 16">
+          <button id="btn13" class="col-lg-1 col-sm-2 col-3 saveBtn"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-lock-fill" viewBox="0 0 16 16">
             <path d="M8 1a2 2 0 0 1 2 2v4H6V3a2 2 0 0 1 2-2zm3 6V3a3 3 0 0 0-6 0v4a2 2 0 0 0-2 2v5a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V9a2 2 0 0 0-2-2z"/>
           </svg></button>
         </div>
-      <div class="d-flex flex-nowrap col-10 row justify-content-center">
+      <div class="d-flex flex-nowrap col-11 row justify-content-center">
         <div class="col-lg-1 col-sm-2 col-3 hour">2PM</div><textarea name="textarea" id="hr-14" class="col-lg-8 col-sm-7 col-6 description"></textarea>
-        <button id="btn14" class="col-1 saveBtn"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-lock-fill" viewBox="0 0 16 16">
+        <button id="btn14" class="col-lg-1 col-sm-2 col-3 saveBtn"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-lock-fill" viewBox="0 0 16 16">
           <path d="M8 1a2 2 0 0 1 2 2v4H6V3a2 2 0 0 1 2-2zm3 6V3a3 3 0 0 0-6 0v4a2 2 0 0 0-2 2v5a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V9a2 2 0 0 0-2-2z"/>
         </svg></button>
       </div>
-      <div class="d-flex flex-nowrap col-10 row justify-content-center">
+      <div class="d-flex flex-nowrap col-11 row justify-content-center">
         <div class="col-lg-1 col-sm-2 col-3 hour">3PM</div><textarea name="textarea" id="hr-15" class="col-lg-8 col-sm-7 col-6 description"></textarea>
-        <button id="btn15" class="col-1 saveBtn"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-lock-fill" viewBox="0 0 16 16">
+        <button id="btn15" class="col-lg-1 col-sm-2 col-3 saveBtn"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-lock-fill" viewBox="0 0 16 16">
           <path d="M8 1a2 2 0 0 1 2 2v4H6V3a2 2 0 0 1 2-2zm3 6V3a3 3 0 0 0-6 0v4a2 2 0 0 0-2 2v5a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V9a2 2 0 0 0-2-2z"/>
         </svg></button>
       </div>
-      <div class="d-flex flex-nowrap col-10 row justify-content-center">
+      <div class="d-flex flex-nowrap col-11 row justify-content-center">
         <div class="col-lg-1 col-sm-2 col-3 hour">4PM</div><textarea name="textarea" id="hr-16" class="col-lg-8 col-sm-7 col-6 description"></textarea>
-        <button id="btn16" class="col-1 saveBtn"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-lock-fill" viewBox="0 0 16 16">
+        <button id="btn16" class="col-lg-1 col-sm-2 col-3 saveBtn"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-lock-fill" viewBox="0 0 16 16">
           <path d="M8 1a2 2 0 0 1 2 2v4H6V3a2 2 0 0 1 2-2zm3 6V3a3 3 0 0 0-6 0v4a2 2 0 0 0-2 2v5a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V9a2 2 0 0 0-2-2z"/>
         </svg></button>
       </div>
